# case_iterable

./: Cargo.toml  README.md
src/: ast.rs  lib.rs
tests/: test_macro.rs
